--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@lottiefiles/react-lottie-player": "^3.5.3",
     "@next/font": "13.1.4",
     "@studio-freight/lenis": "^0.2.28",
+    "@vercel/analytics": "^1.1.1",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.4",
     "gsap": "^3.11.4",
