--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "next": "13.1.4",
     "prettier-plugin-tailwindcss": "^0.2.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "smooth-scrollbar": "^8.8.4"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
